language fix and position fix on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -716,9 +716,9 @@ footer{
     top: 0;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    /* justify-content: center;
-    align-items: center; */
+    /* justify-content: flex-start; */
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100%;
     backdrop-filter: blur(0rem);
